tests/neg/i12361.scala
object Test {
    foo = macro Impls . foo [ U ] +=    // error  // error
}
